fixed popup align and justify

--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,18 +1,15 @@
 .popup__container {
-  margin: 195px auto 0 auto;
   width: 430px;
   background: #FFFFFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
   position: relative;
-  align-self: flex-start;
-  justify-self: center;
+  align-self: center;
   z-index: 2;
 }
 
 @media screen and (max-width: 628px) {
   .popup__container {
     max-width: 282px;
-    margin: 123px auto 0 auto;
   }
 }
